// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should open an external link 1`] = `
<DocumentFragment>
  <a
    class="Link__AnchorStyled-ec014t-0 hgIIXP group"
    data-testid="Link"
    href="#"
    rel="noopener noreferrer"
    to="https://payvo.com/"
  >
    <span
      class="Link__Content-ec014t-1 emZiaA"
    />
    <span
      class="align-middle"
    >
      <div
        class="sc-bdfBwQ dnaihB flex-shrink-0 duration-200"
        data-testid="Link__external"
        height="1em"
        width="1em"
      >
        <svg>
          redirect.svg
        </svg>
      </div>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link should render 1`] = `
<DocumentFragment>
  <a
    class="Link__AnchorStyled-ec014t-0 hgIIXP group"
    data-testid="Link"
    href="/test"
  >
    <span
      class="Link__Content-ec014t-1 emZiaA"
    >
      Test
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link should render external without children 1`] = `
<DocumentFragment>
  <a
    class="Link__AnchorStyled-ec014t-0 hgIIXP group"
    data-testid="Link"
    href="#"
    rel="noopener noreferrer"
    to="https://payvo.com"
  >
    <span
      class="Link__Content-ec014t-1 emZiaA"
    />
    <span
      class="align-middle"
    >
      <div
        class="sc-bdfBwQ dnaihB flex-shrink-0 duration-200"
        data-testid="Link__external"
        height="1em"
        width="1em"
      >
        <svg>
          redirect.svg
        </svg>
      </div>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link should render with tooltip 1`] = `
<DocumentFragment>
  <a
    class="Link__AnchorStyled-ec014t-0 hgIIXP group"
    data-testid="Link"
    href="/test"
  >
    <span
      class="Link__Content-ec014t-1 emZiaA"
    >
      Test
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link should show a toast when trying to open an invalid external link 1`] = `
<DocumentFragment>
  <a
    class="Link__AnchorStyled-ec014t-0 hgIIXP group"
    data-testid="Link"
    href="#"
    rel="noopener noreferrer"
    to="invalid-url"
  >
    <span
      class="Link__Content-ec014t-1 emZiaA"
    />
    <span
      class="align-middle"
    >
      <div
        class="sc-bdfBwQ dnaihB flex-shrink-0 duration-200"
        data-testid="Link__external"
        height="1em"
        width="1em"
      >
        <svg>
          redirect.svg
        </svg>
      </div>
    </span>
  </a>
</DocumentFragment>
`;
